--- a/css/main.css
+++ b/css/main.css
@@ -35,5 +35,27 @@ h1 {
 h1 span {
   text-transform: uppercase;
   display: block;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
+  position: relative;
+  z-index: 1;
+}
+
+h1 span::before {
+  content: '';
+  position: absolute;
+  width: 3em;
+  background: #00bfff;
+  height: .4em;
+  bottom: 0;
+  z-index: -1;
+  margin-left: -.3em;
+}
+
+.hero-bg p {
+  font-weight: bold;
+  margin: 0 1em 3em;
+}
+
+.form-container {
+  background-color: white;
 }
