--- a/css/main.css
+++ b/css/main.css
@@ -58,4 +58,44 @@ h1 span::before {
 
 .form-container {
   background-color: white;
+  margin: 2em -1em 0; 
+  padding: 2em;
 }
+
+label {
+  color: #2d7d98;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 1em;
+  font-size: 1.2em;
+}
+
+input[type=text] {
+  border: 1px solid #707070;
+  width: 100%;
+  padding: 1em;
+  box-sizing: border-box;
+  border-radius: .5em;
+  margin-top: 1.2em;
+}
+
+.form-container p {
+  color: gray;
+  font-weight: normal;
+  margin-bottom: 1.5em;
+  font-size: .9em;
+  margin-top: .3em;
+}
+
+input[type=button] {
+  background-color: #f89104;
+  border: none;
+  width: 100%;
+  color: white;
+  font-weight: bold;
+  padding: 1em 0;
+  border-radius: .5em;
+  font-size: 1.3em;
+  cursor: pointer;
+}
+
