--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
 
+
+/* Custom Properties */
+
+:root {
+  --leading: 2em;
+}
+
+
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
@@ -104,3 +112,35 @@ input[type=button]:hover {
   background-color: rgb(216, 126, 1);
 }
 
+.authentic {
+  margin: 0;
+}
+
+.right-col {
+  text-align: center;
+  margin: 3em 1em;
+}
+
+h2 {
+  text-transform: uppercase;
+  position: relative;
+}
+
+h2::before {
+  content: ' ';
+  position: absolute;
+  width: 8em;
+  background: #00bfff;
+  height: .4em;
+  bottom: 0;
+  z-index: -1;
+  margin-left: -.3em;
+}
+
+img {
+  width: 100%;
+}
+
+p {
+  line-height: var(--leading);
+}
