messing around with media queries

--- a/css/main.css
+++ b/css/main.css
@@ -146,5 +146,12 @@ p {
 }
 
 @media (min-width: 730px) {
-  
+    section {
+     margin: 0 4em;
+    }
+
+    .form-container {
+      margin: 2em -4em 0; 
+    }
+
 }
