--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,12 @@ p {
   line-height: var(--leading);
 }
 
-@media (min-width: 730px) {
+
+/* MEDIA QUERIES */
+
+/* min-width means anything above the pixel number ... 730px (phones), 930px (tablet), and --- always use min-width when doing responsive first*/ 
+
+ @media (min-width: 730px) {
     section {
      margin: 0 4em;
     }
@@ -157,17 +162,69 @@ p {
 }
 
 @media (min-width: 930px) {
+
     .hero-bg {
       text-align: left;
     }    
-
     .hero-bg p {
       font-weight: bold;
       margin: 0 0 3em;
-  }
-
+    }
     .hero-bg section {
       width: 65%;
-  }
+    }
+
+    .form-container {
+      margin: 2em 0 0; 
+      padding: 2em;
+      border-radius: .5em;
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, .3);
+    }
+
+    form {
+      display: flex;
+    }
+
+    .form-left {
+      width: 70%;
+    }
+
+    label {
+      margin: 0;
+    }
+
+    input[type="button"] {
+      height: fit-content;
+      font-size: 1.1em;
+      margin-left: 1em;
+      margin-top: 2.2em;
+      padding: .7em 0;
+      width: 30%;
+    } 
+
+    .hero-bg p {
+      margin-bottom: 0;
+    }
+
+    section.authentic {
+      display: grid;
+      grid-template-columns: repeat(2, 50%);
+      grid-template-areas: "bowl content";
+    } 
+
+    .right-col {
+      grid-area: content;
+      padding: 0 10%;
+      text-align: left;
+      align-self: center;
+    }
+
+    img {
+      grid-area: bowl;
+    }
+
+    h2 {
+      margin: 0;
+    }
 
 }
