--- a/css/main.css
+++ b/css/main.css
@@ -238,8 +238,10 @@ p {
 @keyframes fadeIn {
   from { 
     opacity: 0;
+    transform: translateY(-2em);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
