--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,18 @@ p {
   line-height: var(--leading);
 }
 
+.overlay {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0,0,0,.9);
+  z-index: 1;
+  place-content: center;
+  color: white;
+  display: none;
+  opacity: 0;
+}
+
 
 /* MEDIA QUERIES */
 
